--- a/config/php/uploads.ini
+++ b/config/php/uploads.ini
@@ -1,4 +1,6 @@
-memory_limit = 256M
+memory_limit = 128M
 upload_max_filesize = 64M
 post_max_size = 64M
-max_execution_time = 900
+max_execution_time = 30
+log_errors = On
+error_reporting = E_ALL
