--- a/docker-compose-development.yml
+++ b/docker-compose-development.yml
@@ -24,8 +24,8 @@ services:
      links:
         - db:mysql
         - redis
-     image: guoxiangke/wechat:laravel56
-     # build: ./laravel
+     # image: guoxiangke/wechat:laravel56
+     build: ./laravel
      network_mode: "bridge"
      restart: always
      ports:
