--- a/docker-compose-staging.yml
+++ b/docker-compose-staging.yml
@@ -25,8 +25,7 @@ services:
      links:
         - db:mysql
         - redis
-     image: guoxiangke/wechat:laravel56
-     # build: ./laravel
+     build: ./laravel
      network_mode: "bridge"
      restart: always
      volumes:
