--- a/docker-compose-staging.yml
+++ b/docker-compose-staging.yml
@@ -29,7 +29,7 @@ services:
      network_mode: "bridge"
      restart: always
      volumes:
-        - ./laravel/storage/app:/var/www/html/storage/app
+        - ./laravel/storage/app:/var/www/html/storage/app:rw
         - /tmp:/tmp
         - ./laravel/cert:/var/www/html/cert:ro
         - ./laravel/app:/var/www/html/app
