--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -25,8 +25,8 @@ services:
      links:
         - db:mysql
         - redis
-     image: guoxiangke/wechat:laravel56
-     # build: ./laravel
+     # image: guoxiangke/wechat:laravel56
+     build: ./laravel
      network_mode: "bridge"
      restart: always
      volumes:
