--- a/config/php/uploads.ini
+++ b/config/php/uploads.ini
@@ -5,9 +5,4 @@ max_execution_time = 60
 log_errors = On
 error_log = /var/www/html/storage/logs/laravel.log
 error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
-; Common Values:
-;   E_ALL (Show all errors, warnings and notices including coding standards.)
-;   E_ALL & ~E_NOTICE  (Show all errors, except for notices)
-;   E_ALL & ~E_NOTICE & ~E_STRICT  (Show all errors, except for notices and coding standards warnings.)
-;   E_COMPILE_ERROR|E_RECOVERABLE_ERROR|E_ERROR|E_CORE_ERROR  (Show only errors)
-
+curl.cainfo = /var/www/html/docker/cacert.pem
